adding hyperlink to code in README

--- a/code/20200418_P162.Fig2e.code.Rmd
+++ b/code/20200418_P162.Fig2e.code.Rmd
@@ -73,5 +73,5 @@ wilcox.test(formula = `Neutralization SIVmac251.6.ID#1050 (Tier1)` ~
 
 Print session info
 ```{r, session-info}
-sessionInfo(/)
+sessionInfo()
 ```
